<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/grad"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circle_border"
                    android:padding="3dp"
                    android:src="@drawable/barbatos" />

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/detail_image"
                    android:layout_toRightOf="@id/detail_image"
                    android:includeFontPadding="false"
                    android:text="@string/detail_names"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/username_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/detail_image"
                    android:layout_toRightOf="@+id/detail_image"
                    android:includeFontPadding="false"
                    android:text="@string/username"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="20dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_bright"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/detail_follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/followers"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/detail_follower"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/follows"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_bright"
                        android:padding="2dp">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_favorite"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/holo_blue_bright"
                            android:src="@drawable/ic_baseline_favorite_24" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_blue_bright"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/detail_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/following"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/detail_following"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/followng"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/location"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_company"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_work_24" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey" />


            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?actionBarSize"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorHeight="2dp"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tab_layout" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>